--- a/blog-meeting-minutes/authors.yaml
+++ b/blog-meeting-minutes/authors.yaml
@@ -74,3 +74,9 @@ theresa_hilger:
   title: Data Space Operations Manager
   url: https://github.com/ther3sa
   image_url: https://github.com/ther3sa.png
+
+  ds-hzimmer:
+    name: Harald Zimmer
+    title: Test Management on behalf of Catena-X e.V.
+    url: https://github.com/ds-hzimmer
+    image_url: https://github.com/ds-hzimmer.png
