--- a/.markdownlint.yaml
+++ b/.markdownlint.yaml
@@ -23,5 +23,4 @@
 # Do not restrict inline HTML: https://github.com/DavidAnson/markdownlint/blob/main/doc/Rules.md#MD033
 "MD033": false
 # Allow same content on headlines on siblings: https://github.com/DavidAnson/markdownlint/blob/main/doc/Rules.md#MD024
-"MD024":
-  "siblings_only": true
+"MD024": false
