--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
     "clsx": "^1.2.1",
+    "docusaurus-plugin-sass": "^0.2.6",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-slick": "^0.29.0",
+    "sass": "^1.87.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
