Add image-size dependency and downgrade version in package-lock.json in order to avoid errors during build.

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.7.0",
     "husky": "^8.0.2",
-    "markdownlint-cli2": "^0.5.1"
+    "markdownlint-cli2": "^0.5.1",
+    "image-size": "~1.0.2"
   },
   "browserslist": {
     "production": [
