docs: add meeting minutes for 25th april

--- a/blog-meeting-minutes/authors.yaml
+++ b/blog-meeting-minutes/authors.yaml
@@ -118,3 +118,9 @@ daniel_miehle:
   url: https://github.com/danielmiehle
   image_url: https://github.com/danielmiehle.png
   email: daniel.miehle@bmw.de
+
+phil91:
+  name: Phil Schneider
+  title: Software Architect, Eclipse Committer
+  url: https://github.com/Phil91
+  image_url: https://github.com/Phil91.png
