--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/material": "^5.10.17",
     "clsx": "^1.2.1",
     "docusaurus-plugin-sass": "^0.2.6",
+    "image-size": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
