chore: added the new identyhub news letter

--- a/blog-meeting-minutes/authors.yaml
+++ b/blog-meeting-minutes/authors.yaml
@@ -124,3 +124,9 @@ phil91:
   title: Software Architect, Eclipse Committer
   url: https://github.com/Phil91
   image_url: https://github.com/Phil91.png
+
+carlos_rodriguez:
+  name: Carlos Diez Rodriguez
+  title: Dataspace Architect, Eclipse Committer
+  url: https://github.com/CDiezRodriguez.png
+  image_url: https://github.com/CDiezRodriguez.png
