--- a/blog-meeting-minutes/authors.yaml
+++ b/blog-meeting-minutes/authors.yaml
@@ -45,7 +45,7 @@ stephan_bauer:
 
 matbmoser:
   name: Mathias Brunkow Moser
-  title: DPP Architect, Eclipse Committer
+  title: Chief Software Architect, Eclipse Tractus-X Project Lead
   url: https://github.com/matbmoser
   image_url: https://github.com/matbmoser.png
 
