--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.17",
     "clsx": "^1.2.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "docusaurus-plugin-sass": "^0.2.6",
     "elkjs": "^0.11.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^18.2.0",
     "react-slick": "^0.29.0",
     "sass": "^1.87.0",
