--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "build": "docusaurus build",
+    "start": "npm run generate:nav-items && docusaurus start",
+    "build": "npm run generate:nav-items && docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -14,6 +14,7 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "lint-doc": "markdownlint-cli2-config .markdownlint.yaml \"docs/**/*.md\" \"#node_modules\"",
     "lint-kits": "markdownlint-cli2-config .markdownlint.yaml \"docs-kits/**/*.md\" \"#node_modules\"",
+    "generate:nav-items": "node utils/generateKitNavItems.js",
     "prepare": "husky install"
   },
   "dependencies": {
