feat: update kit navigation and validation scripts; add pre-build script for data validation

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "npm run generate:nav-items && docusaurus start",
-    "build": "npm run generate:nav-items && docusaurus build",
+    "start": "npm run pre-build:kit-master-data && docusaurus start",
+    "build": "npm run pre-build:kit-master-data && docusaurus build",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -15,6 +15,9 @@
     "lint-doc": "markdownlint-cli2-config .markdownlint.yaml \"docs/**/*.md\" \"#node_modules\"",
     "lint-kits": "markdownlint-cli2-config .markdownlint.yaml \"docs-kits/**/*.md\" \"#node_modules\"",
     "generate:nav-items": "node utils/generateKitNavItems.js",
+    "pre-build:kit-master-data": "npm run validate:kits:silent && npm run generate:nav-items",
+    "validate:kits": "node utils/validate-kits-data.js",
+    "validate:kits:silent": "node utils/validate-kits-data.js --silent",
     "prepare": "husky install"
   },
   "dependencies": {
