feat: ignored linting for template

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "lint-doc": "markdownlint-cli2-config .markdownlint.yaml \"docs/**/*.md\" \"#node_modules\"",
-    "lint-kits": "markdownlint-cli2-config .markdownlint.yaml \"docs-kits/**/*.md\" \"#node_modules\"",
+    "lint-kits": "markdownlint-cli2-config .markdownlint.yaml \"docs-kits/kits/**/*.md\" \"#node_modules\"",
     "generate:nav-items": "node utils/generateKitNavItems.js",
     "pre-build:kit-master-data": "npm run validate:kits:silent && npm run generate:nav-items",
     "validate:kits": "node utils/validate-kits-data.js",
