Add @lgblaumeiser as codeowner for connector kit
Signed-off-by: Lars Geyer-Blaumeiser <lars.blaumeiser@cofinity-x.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -14,3 +14,6 @@
 
 # Example of KIT Code Owner eg. Data Trust & Security KIT
 /docs-kits/kits/data-trust-and-security-kit/ @matbmoser
+
+# Connector KIT
+/docs-kits/kits/connector-kit/ @lgblaumeiser
