--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "date-fns-tz": "^3.2.0",
     "docusaurus-plugin-sass": "^0.2.6",
     "elkjs": "^0.11.0",
+    "html2canvas": "^1.4.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^18.2.0",
     "react-big-calendar": "^1.19.4",
