--- a/.github/workflows/generate-kit-pdf.yaml
+++ b/.github/workflows/generate-kit-pdf.yaml
@@ -60,7 +60,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install markdown weasyprint
+          pip install markdown weasyprint requests
       
       - name: Generate PDF
         run: |
