--- a/.github/workflows/generate-kit-word.yaml
+++ b/.github/workflows/generate-kit-word.yaml
@@ -85,6 +85,7 @@ jobs:
           fi
       
       - name: Commit generated documents
+        if: github.event_name == 'push'
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
@@ -92,6 +93,7 @@ jobs:
           git diff --staged --quiet || git commit -m "chore: update kit-template documents [skip ci]"
       
       - name: Push changes
+        if: github.event_name == 'push'
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
