chore(docs): add details for the first international Eclipse Tractus-X hackathon in Spain

--- a/blog-meeting-minutes/authors.yaml
+++ b/blog-meeting-minutes/authors.yaml
@@ -135,3 +135,13 @@ carlos_rodriguez:
   title: Dataspace Architect, Eclipse Committer
   url: https://github.com/CDiezRodriguez
   image_url: https://github.com/CDiezRodriguez.png
+
+bjoern_roy:
+  name: Björn Roy
+  url: https://github.com/giterrific
+  image_url: https://github.com/giterrific.png
+
+mikel_garcia:
+  name: Mikel Garcia
+  url: https://github.com/mgarciaLKS
+  image_url: https://github.com/mgarciaLKS.png
